Fix overlap with post

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -94,6 +94,7 @@ main {
 
   @media screen and (min-width: $mobileW + 1) {
     position: fixed;
+    max-width: 280px;
   }
 
   min-width: $leftWidth;
